Add ReplayType enum and enhance replay functionality
- Introduced ReplayType enum to categorize replays as DEATH or BOSS_KILL.
- Updated DatabaseManager to handle new replay type in save and retrieval methods.
- Modified SpectralCommand and ReplayManager to support filtering and scheduling based on replay type.
- Adjusted PlayerListener to save replays with appropriate types upon player deaths.
- Enhanced configuration to include separate delay settings for boss replays.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,6 +9,11 @@ min-delay: 12000
 # 24000 ticks = 20 minutes
 max-delay: 24000
 
+# Boss Replay Settings
+boss-replay:
+  min-delay: 6000 # 5 minutes
+  max-delay: 12000 # 10 minutes
+
 # Defines if armor should be displayed on the ghost
 # true = displays the armor the player was wearing
 # false = ghost without armor
