--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,5 +8,5 @@ depend: [Citizens]
 commands:
   spectral:
     description: Admin commands for Spectral Replay
-    usage: /spectral <play|list|place|list-placed|remove|delete>
+    usage: /spectral <play|list|place|list-placed|remove|delete|reset-cooldowns>
     permission: spectralreplay.admin
