Disable boss kill replays and adjust armor display settings for PVP and death replays

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -22,7 +22,8 @@ boss-replay:
 # Defines if armor should be displayed on the ghost
 # true = displays the armor the player was wearing
 # false = ghost without armor
-armor: false
+armor-pvp: true
+armor-death: false
 
 # Proximity Replay (Jumpscare) Settings
 proximity-replay:
